<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RealEstateSearcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Street_Address">Street Address</string>
    <string name="City_Address">City</string>
    <string name="head_text">Search Your Property Here</string>
    <string name="address_text">Address*:</string>
    <string name="city_text">City*:</string>
    <string name="state_text">State*:</string>
    <string name="search_text">Search</string>
    <string name="zillowDesc">Zillow Logo</string>
    <string name="table_top">See more details on Zillow:</string>
    <string name="facebook_app_id">678978195548950</string>
    <string name="title_facebook_login">Log Into Facebook</string>
    


    <string-array name="state_array">
        <item>Choose State</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_collection_demo">CollectionDemoActivity</string>

</resources>
